// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test into <GifGrid /> component should show items when useFetchGifs load them 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__bounceIn animate__delay-1s"
  >
    One Punch
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Anything"
      url="https://localhost/any/thing.jpg"
    />
    <GifGridItem
      id="123"
      key="123"
      title="Anything"
      url="https://localhost/any/thing.jpg"
    />
  </div>
</Fragment>
`;

exports[`Test into <GifGrid /> component test into the component 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__bounceIn animate__delay-1s"
  >
    One Punch
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
